css/styles.css
body, html {
	height: 100%;
	min-height: 100%;

}
body {
	background-color: #333;
	margin: 0;
	padding: 0;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	color: #ffb6a9;
	padding-bottom: 10px;
}
canvas {
	display: block;
	margin-left: auto;
	margin-right: auto;
	max-width: 100%;
}
b, h3{
	color: #fff;
}
h3, h1{
	margin-bottom: 0;
}
p{
	margin-top: 10px;
	color: #ffb6a9;
	font-size: 16px;
}
h1{
	color: #ffa7ff;
}
.wrapper {
	margin-left: auto;
	margin-right: auto;
	width: 100%;
	max-width: 574px;
	padding: 0 15px;
	box-sizing: border-box;
}
.wrapper:after {
	content: " ";
	clear: both;
	display: table;
}

.wrapper:before {
	content: " ";
	display: table;
}
a{
	color: #ffe17f;
}
ul#controls>li{
	font-size: 17px;
	line-height: 21px;

}

.text-right {
	text-align: right;
}
.pt-5 {
	padding-top: 10px;
}
.col-50 {
	width: 50%;
	float: left;
}
.bg-dark {
	background-color: rgba(.0, .0, .0, .3);
}
.fa , .far, .fab {
	font-size: 38px;
	padding: 3px;
	margin: 10px;
	cursor: pointer;
}

.active {
	color: #155fd9;
}

.pull-right {
	float: right;
}

@media (max-width: 767px) {
	.wrapper-explanation {
		padding-top: 50px;
	}
}

